# multicam-detector

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.b1  PowerSaveDisabled.txt  ReadMe.txt  ReadMeeGitHub.txt  V4L2_commands.txt  main.cc  main.cc.b1  main.cc.b10  main.cc.b2  main.cc.b3  main.cc.b4  main.cc.b8  main.cc.b9  postprocess.cc  postprocess.h  v4l2_capture.h  yolov8_web_server.cc
config/: config.json
doc/: ROADMAP.md
include/: camera_manager.h  camera_manager.h.b2  camera_worker.h  common_types.h.b1  common_types.h.b2  drawing.h  global_id_fuser.h  npu_worker_pool.h  postprocess.h.b  postprocess_yolov8.h  tracker_sort.h  v4l2_profiles.h  web_server.h
include/utils/: CMakeLists.txt  image_utils.c  image_utils.c.b1  image_utils.c.b2  image_utils.h
rknpu1.b/: yolov8.cc
rknpu2/: yolov8.cc
src/: camera_manager.cc  camera_manager.cc.b2  camera_manager.cc.b3  camera_manager.cc.b4  camera_worker.cc  camera_worker.cc.b1  camera_worker.cc.b2  config_loader.cc.b1  config_loader.cc.b2  global_id_fuser.cc  npu_worker_pool.cc  tracker_sort.cc  v4l2_profiles.cc  web_server.cc  web_server.cc.b2  web_server.cc.b3  web_server.cc.b4
web/: index.html
